tests/pact/bad/bad-cap-import-fqn.repl
(begin-tx)
(module m A

  (defcap A () true)

)
(commit-tx)

(module n B

  (defcap B () m.A)
)
